# configurable_chemical_element

./: .gitignore  Cargo.toml  README.md  periodic_table_info_generator.py
api/: Cargo.toml
configurable_chemical_element/: Cargo.toml  pyproject.toml
configurable_chemical_element/src/: element_types.rs  lib.rs
macro/: Cargo.toml  periodic_table_info.json
macro_util/: Cargo.toml  periodic_table_info.json  periodic_table_info_sample.json
macro_util/src/: helpers.rs  internal_types.rs  lib.rs
