[workspace]
members = [
    "configurable_chemical_element",
    "macro_util",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "placeholder"

[profile.release]
debug = false
strip = true
lto = "fat"

[profile.cpu-profiling]
inherits = "release"
debug = true
strip = false
lto = "fat"
